fixed masonry layout bug

--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -1,62 +1,14 @@
-.container { 
-    display:flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    -webkit-column-count: 4;
-  -moz-column-count:4;
-  column-count: 4;
-  -webkit-column-gap: 1em;
-  -moz-column-gap: 1em;
-  column-gap: 1em;
-   margin: 1.5em;
-    padding: 0;
-    -moz-column-gap: 1.5em;
-    -webkit-column-gap: 1.5em;
-    column-gap: 1.5em;
-    font-size: .85em;
-  }
-  .card {
-    display: inline-block;
-    background: #fff;
-    padding: 1em;
-    margin: 0 0 1.5em;
-    width: 50%;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-shadow: 2px 2px 4px 0 #ccc;
-  }
-  .card img{
-   width:50%;
+.card {
+  display: inline-block;
+  background: #fff;
+  padding: 1em;
+  margin: 0 0 1.5em;
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-shadow: 2px 2px 4px 0 #ccc;
 }
-  
-  @media only screen and (max-width: 320px) {
-    .container {
-        -moz-column-count: 1;
-        -webkit-column-count: 1;
-        column-count: 1;
-    }
-  }
-  
-  @media only screen and (min-width: 321px) and (max-width: 768px){
-    .container {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
-    }
-  }
-  @media only screen and (min-width: 769px) and (max-width: 1200px){
-    .container {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
-    }
-  }
-  @media only screen and (min-width: 1201px) {
-    .container {
-        -moz-column-count: 4;
-        -webkit-column-count: 4;
-        column-count: 4;
-    }
-  }
+.card img{
+  max-width:100%;
+}
