--- a/src/Components/ItemList/ItemList.css
+++ b/src/Components/ItemList/ItemList.css
@@ -2,3 +2,49 @@
 margin: 7.5em;
 
 }
+
+.container { 
+    -webkit-column-count: 4;
+    -moz-column-count:4;
+    column-count: 4;
+    -webkit-column-gap: 1em;
+    -moz-column-gap: 1em;
+    column-gap: 1em;
+     margin: 1.5em;
+      padding: 0;
+      -moz-column-gap: 1.5em;
+      -webkit-column-gap: 1.5em;
+      column-gap: 1.5em;
+      font-size: .85em;
+  }
+    
+    
+    @media only screen and (max-width: 320px) {
+      .container {
+          -moz-column-count: 1;
+          -webkit-column-count: 1;
+          column-count: 1;
+      }
+    }
+    
+    @media only screen and (min-width: 321px) and (max-width: 768px){
+      .container {
+          -moz-column-count: 2;
+          -webkit-column-count: 2;
+          column-count: 2;
+      }
+    }
+    @media only screen and (min-width: 769px) and (max-width: 1200px){
+      .container {
+          -moz-column-count: 3;
+          -webkit-column-count: 3;
+          column-count: 3;
+      }
+    }
+    @media only screen and (min-width: 1201px) {
+      .container {
+          -moz-column-count: 4;
+          -webkit-column-count: 4;
+          column-count: 4;
+      }
+    }
