--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+body{
+    margin: 0;
+}
+
 h1{
     margin-top: 0em;
     display:flex;
